--- a/PL/Views/Prestamo/GetAll.cshtml
+++ b/PL/Views/Prestamo/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model ML.Medio
+﻿@model ML.MediosYUsuarios
 @{
     ViewData["Title"] = "GetAll";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -17,8 +17,16 @@
             <br />
         </div>
     </div>
+    @using (Html.BeginForm("SacarEnPrestamo", "Prestamo", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{   
+    <div class="row">
+        <div class="col-md">
+            @Html.DropDownListFor(model => model.UserIdentity.IdentityUsers, new SelectList(Model.UserIdentity.IdentityUsers,"IdUsuario","UserName"),"Seleccione un Usuario",new{ @class="form-control"})
+        </div>
+    </div>
+
     <br />
-    @if (Model.Medios != null && Model.Medios.Count > 0)
+    @if (Model.Medio.Medios != null && Model.Medio.Medios.Count > 0)
     {
         <div class="row">
             <div class="col-md-12">
@@ -44,7 +52,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach(ML.Medio medio in Model.Medios)
+                        @foreach (ML.Medio medio in Model.Medio.Medios)
                         {
                             <tr>
                                 <td class="text-center"><a class="btn btn-warning bi bi-pencil" href="@Url.Action("SacarEnPrestamo","Prestamo", new {IdMedio = medio.IdMedio})"></a></td>
@@ -84,5 +92,5 @@
     {
         <div class="alert alert-danger" role="alert">@ViewBag.Mensaje</div>
     }
-</div>
+}
 
